--- a/docs/backlog.adoc
+++ b/docs/backlog.adoc
@@ -1,5 +1,19 @@
+= PBI Management
+== ACT ITEMS
 |===
 |Item |Type | Link
+3+|REVIEW
 3+|WIP
 |Commits per Day | Story | <<commitsPerDay.adoc#Commits per Day>>
+3+|READY
+3+|TODO
+|===
+
+== DONE
+|===
+|Item |Type | Link
+3+|STORIES
+3+|TASKS
+|Create Github Repository | Task | NA
+3+|BUGS
 |===
